; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-stream.c_pdf_open_raw_stream_number.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-stream.c_pdf_open_raw_stream_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i64, i32 }

@FZ_ERROR_GENERIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"object id out of range (%d 0 R)\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"object is not a stream\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pdf_open_raw_stream_number(i32* %0, %struct.TYPE_9__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp sle i32 %10, 0
  br i1 %11, label %18, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* %6, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %16 = call i32 @pdf_xref_len(i32* %14, %struct.TYPE_9__* %15)
  %17 = icmp sge i32 %13, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %12, %3
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 (i32*, i32, i8*, ...) @fz_throw(i32* %19, i32 %20, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %18, %12
  %24 = load i32*, i32** %4, align 8
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call %struct.TYPE_8__* @pdf_cache_object(i32* %24, %struct.TYPE_9__* %25, i32 %26)
  store %struct.TYPE_8__* %27, %struct.TYPE_8__** %7, align 8
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = icmp eq i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %23
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %35 = call i32 (i32*, i32, i8*, ...) @fz_throw(i32* %33, i32 %34, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  br label %36

36:                                               ; preds = %32, %23
  %37 = load i32*, i32** %4, align 8
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = load i32, i32* %6, align 4
  %46 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = call i32* @pdf_open_raw_filter(i32* %37, i32 %40, %struct.TYPE_9__* %41, i32 %44, i32 %45, i32* %8, i32* %9, i64 %48)
  ret i32* %49
}

declare dso_local i32 @pdf_xref_len(i32*, %struct.TYPE_9__*) #1

declare dso_local i32 @fz_throw(i32*, i32, i8*, ...) #1

declare dso_local %struct.TYPE_8__* @pdf_cache_object(i32*, %struct.TYPE_9__*, i32) #1

declare dso_local i32* @pdf_open_raw_filter(i32*, i32, %struct.TYPE_9__*, i32, i32, i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
